# Rocket-trajectory-control

./: README.md  calcular_coeficientes_control.py  coeficientes.md  config.py  control_coefficients.md  initial_data.py  main.py  pyproject.toml  trajectory-creator.py
data/drag/: leon_2_drag.csv
data/motors/: cesaroni_pro75_3g_3727l1050.csv
data/rockets/: leon_2.toml
data/trajectory/: 85degree.csv  vertical.csv
docs/: architecture.md  coordinate_systems.md  io_specs.md  plots.md  running_the_simulation.md
docs/modules/: calculate_control_coefficients.md  controllers.md  environment_builder.md  fin_model.md  metrics.md  reference.md  rocket_builder.md  simulation.md  utils.md
docs/tools/: calculate_control_coefficients.md  sweep_gain_scale.md  trajectory-creator.md  tunning.md
src/: __init__.py  constants.py  controllers.py  environment_builder.py  fin_model.py  gen_reference.py  metrics.py  plots.py  reference.py  rocket_builder.py  simulation.py  utils.py
tools/: calculate_control_coefficients.py  sweep_gain_scale.py  trajectory-creator.py  tunning.py
