[project]
name = "rocket-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.10.9",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "rocketpy==1.12.1",
    "scipy==1.17.1",
    "toml==0.10.2",
]

[project.scripts]
rocket-control = "main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true